--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@ footer{
 </section>
 
 <section id="trips">
-    <h2>رحلاتنا</h2>
+    <h2>تعاقدات فنادقنا صيف 2026</h2>
 
-    <div class="trip-card" onclick="goTo('omra.html')"> فنادق بورسعيد</div>
-    <div class="trip-card" onclick="goTo('sharm.html')">فنادق شرم الشيخ</div>
-    <div class="trip-card" onclick="goTo('hurghada.html')">فنادق مرسي مطروح</div>
-    <div class="trip-card" onclick="goTo('dahab.html')">فنادق دهب</div>
+    <div class="trip-card" onclick="goTo('omra.html')">  بورسعيد</div>
+    <div class="trip-card" onclick="goTo('sharm.html')"> شرم الشيخ</div>
+    <div class="trip-card" onclick="goTo('hurghada.html')"> مرسي مطروح</div>
+    <div class="trip-card" onclick="goTo('dahab.html')"> دهب</div>
     
 </section>
 
