--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@ footer{
         display:inline-block;
         margin:15px;
     }
+#contact{
+    padding:10px 0;   /* يقلل المسافة بين كل بلوك */
+}
+
+#contact h3{
+    margin:5px 0 8px; /* يقلل المسافة تحت الاسم */
+}
+
+.phone{
+    margin-top:5px;   /* بدل 20px */
+}
 
 </style>
 </head>
@@ -192,16 +203,24 @@ footer{
 <section id="trips">
     <h2>تعاقدات فنادقنا صيف 2026</h2>
 
-    <div class="trip-card" onclick="goTo('omra.html')">  بورسعيد</div>
+    <div class="trip-card" onclick="goTo('portsaid.html')">  بورسعيد</div>
     <div class="trip-card" onclick="goTo('sharm.html')"> شرم الشيخ</div>
-    <div class="trip-card" onclick="goTo('hurghada.html')"> مرسي مطروح</div>
+    <div class="trip-card" onclick="goTo('Marsa.html')"> مرسي مطروح</div>
     <div class="trip-card" onclick="goTo('dahab.html')"> دهب</div>
     
 </section>
 
 <section id="contact">
-    <h2>تواصل معنا</h2>
-    <a href="tel:01208316131" class="phone">📞 01208316131</a>
+    <h3>ميسرة ابو زيد</h3>
+    <a href="tel:01286891468" class="phone">📞 01286891468</a>
+</section>
+<section id="contact">
+    <h3>محمد الخياط</h3>
+    <a href="tel:01023444183" class="phone">📞 01023444183</a>
+</section>
+<section id="contact">
+    <h3>احمد ابو زيد</h3>
+    <a href="tel:01222433367" class="phone">📞 01222433367</a>
 </section>
 
 <footer>
