--- a/continental.html
+++ b/continental.html
@@ -155,6 +155,93 @@ body, html{
 }
 
 
+/* ===== Image Gallery ===== */
+.gallery{
+    display:grid;
+    grid-template-columns:repeat(auto-fill,minmax(120px,1fr));
+    gap:10px;
+}
+
+.gallery img{
+    width:100%;
+    height:120px;
+    object-fit:cover;
+    border-radius:12px;
+    cursor:pointer;
+    transition:.3s;
+}
+
+.gallery img:hover{
+    transform:scale(1.05);
+}
+
+/* ===== Lightbox ===== */
+#lightbox {
+    display: none;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius:12px;
+    box-shadow:0 0 20px rgba(0,0,0,0.5);
+}
+/* ===== Lightbox Arrows ===== */
+.nav{
+    position:absolute;
+    top:50%;
+    transform:translateY(-50%);
+    font-size:40px;
+    color:#fff;
+    cursor:pointer;
+    padding:10px 15px;
+    background:rgba(0,0,0,0.4);
+    border-radius:50%;
+    
+}
+
+.nav:hover{
+    background:rgba(0,0,0,0.7);
+}
+
+.prev{
+    right:20px; /* لأن الصفحة RTL */
+}
+
+.next{
+    left:20px;
+}
+/* Horizontal scroll gallery */
+.gallery{
+    display:flex;
+    overflow-x:auto;
+    gap:10px;
+    padding-bottom:10px;
+}
+
+.gallery img{
+    flex:0 0 auto;
+    width:150px; /* أو حسب المساحة */
+    height:100px;
+    border-radius:12px;
+    cursor:pointer;
+    transition:.3s;
+}
+
+.gallery img:hover{
+    transform:scale(1.05);
+}
+
+
 
 </style>
 </head>
@@ -207,10 +294,23 @@ body, html{
 
 <div class="card">
     <h3 style="text-align:center;color:#fd690d;margin-bottom:10px;">صور الفندق</h3>
-<div class="card">
-    <iframe src="https://drive.google.com/file/d/1Uf4nj1CfgmUhSRcvFUNhPvAFkCsVQCiW/preview" 
-            width="100%" height="500" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
+<div class="gallery">
+
+<img src="https://lh3.googleusercontent.com/d/1fBwWFIHyYFlvk0Do0cLAZzvhFo7_ppBN=w2000">
+<img src="https://lh3.googleusercontent.com/d/1eP_OeGnIxpjCuCHf_knX9izre327Pk1V=w2000">
+<img src="https://lh3.googleusercontent.com/d/15yKHgMNnOOO_omEdtwdgs9QJ7-FIFz8M=w2000">
+<img src="https://lh3.googleusercontent.com/d/1NZ4u9jRemlB-dxYDbz9ZMpKEhqmei4I3=w2000">
+<img src="https://lh3.googleusercontent.com/d/1ZbRG7I0ztx1D9SwJx2p4oJw8p1EV7LE_=w2000">
+<img src="https://lh3.googleusercontent.com/d/10NkaAWA30PtemGmXa4p6DKPiwSbSLMR8=w2000">
+<img src="https://lh3.googleusercontent.com/d/1so4mwXgZ3xZ_E7duRsMkn3-Ppiof09L3=w2000">
+<img src="https://lh3.googleusercontent.com/d/1Od3ukp5ydAZ0tIG2ZLF7seHA4gdJdFWW=w2000">
+<img src="https://lh3.googleusercontent.com/d/1tTjyuFyEKOvGU5JsqOPJbaKc8xFF0xhl=w2000">
+<img src="https://lh3.googleusercontent.com/d/1OFAV1XHaYmOTdumgsygm4DxcyzrqMc9k=w2000">
+<img src="https://lh3.googleusercontent.com/d/1m9klHprphT9aP7mqxzuxuqsqvo5rvM9V=w2000">
+<img src="https://lh3.googleusercontent.com/d/1R8wBENif98KbfeHUBP8ve6xrFOujAI9k=w2000">
+<img src="https://lh3.googleusercontent.com/d/1VU1IWPUq4Pe4nrgKDXlVbDRIKO74lKkx=w2000">
+<img src="https://lh3.googleusercontent.com/d/1Yf7GoQY6gQoPSrlGIIGn28COC9NAoDf7=w2000">
+
 </div>
 
 <div class="card">
@@ -223,22 +323,57 @@ body, html{
 
 <!-- Lightbox Overlay -->
 <div id="lightbox">
+    <span class="nav prev">&#10095;</span>
     <img id="lightbox-img" src="">
+    <span class="nav next">&#10094;</span>
 </div>
-
 
 <script>
 const images = Array.from(document.querySelectorAll('.gallery img'));
 const lightbox = document.getElementById('lightbox');
 const lightboxImg = document.getElementById('lightbox-img');
+const prevBtn = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
 
 let currentIndex = 0;
-let startX = 0;
-let isSwiping = false;
 
+// فتح الصورة
+images.forEach((img, index) => {
+    img.addEventListener('click', () => {
+        currentIndex = index;
+        showImage();
+        lightbox.style.display = "flex";
+    });
+});
 
+function showImage(){
+    lightboxImg.src = images[currentIndex].src;
+}
+
+// السهم اللي يجيب الصورة اللي بعدها
+nextBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex++;
+    if(currentIndex >= images.length){
+        currentIndex = 0;
+    }
+    showImage();
+});
+
+// السهم اللي يرجع صورة
+prevBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex--;
+    if(currentIndex < 0){
+        currentIndex = images.length - 1;
+    }
+    showImage();
+});
+
+// قفل لما اضغط بره الصورة
+lightbox.addEventListener('click', () => {
+    lightbox.style.display = "none";
+});
 </script>
-
-
 </body>
 </html>
