--- a/grand-rotana.html
+++ b/grand-rotana.html
@@ -282,10 +282,20 @@ body, html{
 
 <div class="card">
     <h3 style="text-align:center;color:#fd690d;margin-bottom:10px;">صور الفندق</h3>
-<div class="card">
-    <iframe src="https://drive.google.com/file/d/15iM6Ebr0zoZ8_JRJn3a9q67IiM3Kbk5z/preview" 
-            width="100%" height="500" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
+
+
+    <div class="gallery">
+        <img src="https://lh3.googleusercontent.com/d/1x8UmVFpIkvy6n7JSR15mKvc-JFVz9jR1=w1000">
+        <img src="https://lh3.googleusercontent.com/d/1wANJkF7JTf4lb4wREGkDrlNwS2m5ChNF=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1-8PAWiIZUsCj1geAzipC6hZRG_5MvNrS=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1uwPMKlskbclCqpJKo5w_oy_L3AR1ufJ8=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1JAYtOsitxTPhSwqCDmHS7KigKPJp2T7m=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1HphLZr8hCxoNyM-kdfwg_7CFr-nF0LZF=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1vVh6mcUEH2HOdWqYoBYL1lUqX6Ob3Z7V=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1UHSjH6pMaQ6B2bXtpcqHxnYmhZnlHlAN=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1cNZyVK6mE-B6qy_MwoN_oIT_kNxs_a3r=w1000">
+    <img src="https://lh3.googleusercontent.com/d/1ftrq0yKIe_W1roIuX-FrOxFiqEZnbMNz=w1000">
+    </div>
 </div>
 
 <div class="card">
@@ -298,7 +308,9 @@ body, html{
 
 <!-- Lightbox Overlay -->
 <div id="lightbox">
+    <span class="nav prev">&#10095;</span>
     <img id="lightbox-img" src="">
+    <span class="nav next">&#10094;</span>
 </div>
 
 
@@ -306,12 +318,48 @@ body, html{
 const images = Array.from(document.querySelectorAll('.gallery img'));
 const lightbox = document.getElementById('lightbox');
 const lightboxImg = document.getElementById('lightbox-img');
+const prevBtn = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
 
 let currentIndex = 0;
-let startX = 0;
-let isSwiping = false;
 
+// فتح الصورة
+images.forEach((img, index) => {
+    img.addEventListener('click', () => {
+        currentIndex = index;
+        showImage();
+        lightbox.style.display = "flex";
+    });
+});
 
+function showImage(){
+    lightboxImg.src = images[currentIndex].src;
+}
+
+// السهم اللي يجيب الصورة اللي بعدها
+nextBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex++;
+    if(currentIndex >= images.length){
+        currentIndex = 0;
+    }
+    showImage();
+});
+
+// السهم اللي يرجع صورة
+prevBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex--;
+    if(currentIndex < 0){
+        currentIndex = images.length - 1;
+    }
+    showImage();
+});
+
+// قفل لما اضغط بره الصورة
+lightbox.addEventListener('click', () => {
+    lightbox.style.display = "none";
+});
 </script>
 
 
