--- a/xperience23.html
+++ b/xperience23.html
@@ -155,8 +155,96 @@ body, html{
 }
 
 
+/* ===== Image Gallery ===== */
+.gallery{
+    display:grid;
+    grid-template-columns:repeat(auto-fill,minmax(120px,1fr));
+    gap:10px;
+}
+
+.gallery img{
+    width:100%;
+    height:120px;
+    object-fit:cover;
+    border-radius:12px;
+    cursor:pointer;
+    transition:.3s;
+}
+
+.gallery img:hover{
+    transform:scale(1.05);
+}
+
+/* ===== Lightbox ===== */
+#lightbox {
+    display: none;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius:12px;
+    box-shadow:0 0 20px rgba(0,0,0,0.5);
+}
+/* ===== Lightbox Arrows ===== */
+.nav{
+    position:absolute;
+    top:50%;
+    transform:translateY(-50%);
+    font-size:40px;
+    color:#fff;
+    cursor:pointer;
+    padding:10px 15px;
+    background:rgba(0,0,0,0.4);
+    border-radius:50%;
+   
+}
+
+.nav:hover{
+    background:rgba(0,0,0,0.7);
+}
+
+.prev{
+    right:20px; /* لأن الصفحة RTL */
+}
+
+.next{
+    left:20px;
+}
+/* Horizontal scroll gallery */
+.gallery{
+    display:flex;
+    overflow-x:auto;
+    gap:10px;
+    padding-bottom:10px;
+}
+
+.gallery img{
+    flex:0 0 auto;
+    width:150px; /* أو حسب المساحة */
+    height:100px;
+    border-radius:12px;
+    cursor:pointer;
+    transition:.3s;
+}
+
+.gallery img:hover{
+    transform:scale(1.05);
+}
+
+
 
 </style>
+
 </head>
 
 <body>
@@ -203,11 +291,26 @@ body, html{
 </div>
 
 <div class="card">
-    <iframe src="https://drive.google.com/file/d/1z6n6QD8LFjUh1z53bDasIbgRcgENXvK9/preview" 
-            width="100%" height="500" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
-</div>
+    <h3 style="text-align:center;color:#fd690d;margin-bottom:10px;">صور الفندق</h3>
 
+<div class="gallery">
+
+<img src="https://lh3.googleusercontent.com/d/1XbgiCy1vn41u7rZfqzXDmymfHCgZe867=w2000">
+<img src="https://lh3.googleusercontent.com/d/1dH7tXLRBSiUaWuYVDlPDBaIFECwcMyYz=w2000">
+<img src="https://lh3.googleusercontent.com/d/1VqTIQriP3cDnykR3fT4AHBjwfrqZJTIu=w2000">
+<img src="https://lh3.googleusercontent.com/d/1OMDC8_G0J-jVxfMcIDrxzQXE8OV5PmCP=w2000">
+<img src="https://lh3.googleusercontent.com/d/1Nb8_pOdiDSC4iYBxI7HKFxNVK0AIifHZ=w2000">
+<img src="https://lh3.googleusercontent.com/d/1eK-Q04_NNI9aeeXMd3YsqgZjE_haY57-=w2000">
+<img src="https://lh3.googleusercontent.com/d/1BBguxk2LhRHzzj_UK-3nV7MqM5q7bKZF=w2000">
+<img src="https://lh3.googleusercontent.com/d/1LjR3KiHP31iNERzqUbdsQOPuKQMqxsG9=w2000">
+<img src="https://lh3.googleusercontent.com/d/1ZPCpfiVWOIExk-wsAUjLOmMKKQ-9PPwS=w2000">
+<img src="https://lh3.googleusercontent.com/d/1jJ0eac3RJCLO_sqaQs31W5xbMkyDgRJP=w2000">
+<img src="https://lh3.googleusercontent.com/d/1_N0ExKPa_dTH-9ju25VKjf2H5kx3UCBr=w2000">
+<img src="https://lh3.googleusercontent.com/d/1vU6Tl4fNxB1wuKsVzq8EhJwJSgek0-CP=w2000">
+<img src="https://lh3.googleusercontent.com/d/1LMraOVy0Xxv8m_CbAMfGrpTuWKo3-6U5=w2000">
+<img src="https://lh3.googleusercontent.com/d/1JTSbCH9lnYwfFbuNRSN2WP7dnefWFNtk=w2000">
+
+</div>
 
 
 
@@ -216,8 +319,58 @@ body, html{
 
 
 
+<div id="lightbox">
+    <span class="nav prev">&#10095;</span>
+    <img id="lightbox-img" src="">
+    <span class="nav next">&#10094;</span>
+</div>
+
+<script>
+const images = Array.from(document.querySelectorAll('.gallery img'));
+const lightbox = document.getElementById('lightbox');
+const lightboxImg = document.getElementById('lightbox-img');
+const prevBtn = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
+
+let currentIndex = 0;
+
+// فتح الصورة
+images.forEach((img, index) => {
+    img.addEventListener('click', () => {
+        currentIndex = index;
+        showImage();
+        lightbox.style.display = "flex";
+    });
+});
+
+function showImage(){
+    lightboxImg.src = images[currentIndex].src;
+}
+
+// السهم اللي يجيب الصورة اللي بعدها
+nextBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex++;
+    if(currentIndex >= images.length){
+        currentIndex = 0;
+    }
+    showImage();
+});
+
+// السهم اللي يرجع صورة
+prevBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex--;
+    if(currentIndex < 0){
+        currentIndex = images.length - 1;
+    }
+    showImage();
+});
+
+// قفل لما اضغط بره الصورة
+lightbox.addEventListener('click', () => {
+    lightbox.style.display = "none";
+});
 </script>
-
-
 </body>
 </html>
