--- a/theview.html
+++ b/theview.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>ريتاك</title>
+<title>ذا فيو</title>
 
 <style>
 body{
@@ -205,7 +205,7 @@ body, html{
     padding:10px 15px;
     background:rgba(0,0,0,0.4);
     border-radius:50%;
-    
+   
 }
 
 .nav:hover{
@@ -247,134 +247,137 @@ body, html{
 <body>
 
 <header>
-    <h1>ريتاك</h1>
-    <p>دهب</p>
+    <h1>ذا فيو </h1>
+    <p>مرسي مطروح</p>
 </header>
 
-<div class="card">
-    <div class="price">السعر يبدأ من 3680 جنيه</div>
+<table class="price-table">
 
+<tr>
+    <th>التاريخ</th>
+    <th>عدد الليالي</th>
+    <th>سعر الفرد</th>
 
-    <!-- الجدول مطابق للصورة -->
-    <table class="price-table">
-    <tr>
-        <th>الفترة</th>
-        <th>سينجل</th>
-        <th>دبل</th>
-        <th>تربل</th>
-        <th>الإقامة</th>
-        <th>ملاحظات</th>
-    </tr>
+    <th>التاريخ</th>
+    <th>عدد الليالي</th>
+    <th>سعر الفرد</th>
+</tr>
 
-    <tr>
-        <td class="period">من 10-1 إلى 22-1</td>
-        <td><strong>3680</strong></td>
-        <td><strong>4600</strong></td>
-        <td><strong>6900</strong></td>
-        <td>هاف بورد</td>
-        <td class="notes-cell" rowspan="2">
-            طفل أقل من 12 سنة مجانًا<br>
-            طفل أقل من 6 سنوات مجانًا<br><br>
-            DLX SEA VIEW 1000 PER ROOM<br>
-            FRONT SEA VIEW 1500 PER ROOM<br>
-            NEW YEAR G. DINNER 2000 PER PERSON
-        </td>
-    </tr>
+<tr>
+    <td class="period">28 مايو (العيد)</td>
+    <td>4</td>
+    <td><strong>4800</strong></td>
 
-    <tr>
-        <td class="period">من 23-01 إلى 10-02</td>
-        <td><strong>3825</strong></td>
-        <td><strong>5100</strong></td>
-        <td><strong>7650</strong></td>
-        <td>سوفت يضاف 1000 للفرد</td>
-    </tr>
+    <td>7-27</td>
+    <td>4</td>
+    <td><strong>5600</strong></td>
+</tr>
+
+<tr>
+    <td>6-1</td><td>4</td><td>3800</td>
+    <td>7-31</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-5</td><td>4</td><td>3800</td>
+    <td>8-4</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-9</td><td>4</td><td>3800</td>
+    <td>8-8</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-13</td><td>4</td><td>3800</td>
+    <td>8-12</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-17</td><td>4</td><td>4400</td>
+    <td>8-16</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-21</td><td>4</td><td>4400</td>
+    <td>8-20</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-25</td><td>4</td><td>4400</td>
+    <td>8-24</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>6-29</td><td>4</td><td>5000</td>
+    <td>8-28</td><td>4</td><td>5600</td>
+</tr>
+
+<tr>
+    <td>7-3</td><td>4</td><td>5000</td>
+    <td>9-1</td><td>4</td><td>5300</td>
+</tr>
+
+<tr>
+    <td>7-7</td><td>4</td><td>5000</td>
+    <td>9-5</td><td>4</td><td>5300</td>
+</tr>
+
+<tr>
+    <td>7-11</td><td>4</td><td>5000</td>
+    <td>9-9</td><td>4</td><td>5300</td>
+</tr>
+
+<tr>
+    <td>7-15</td><td>4</td><td>5300</td>
+    <td>9-13</td><td>4</td><td>5000</td>
+</tr>
+
+<tr>
+    <td>7-19</td><td>4</td><td>5300</td>
+    <td>9-17</td><td>4</td><td>3800</td>
+</tr>
+
+<tr>
+    <td>7-23</td><td>4</td><td>5300</td>
+    <td>9-21</td><td>4</td><td>3800</td>
+</tr>
+
 </table>
 
-</div>
-<div class="card">
-    <h3 style="text-align:center;color:#fd690d;margin-bottom:10px;">صور الفندق</h3>
 
-<div class="gallery">
-
-<img src="https://lh3.googleusercontent.com/d/1DLzc1EQmArSmE035OQNhlaVypO3lR56g=s0">
-<img src="https://lh3.googleusercontent.com/d/10SneEeVWpB2OhHunFT0X5aBlXB-8NvUW=s0">
-<img src="https://lh3.googleusercontent.com/d/1KY4t3Jg0QOKPTzanTrTHgqemZgWGM0HZ=s0">
-<img src="https://lh3.googleusercontent.com/d/1RxiHvShoP_YVwk_kmGJIevX2TjjdDAeh=s0">
-<img src="https://lh3.googleusercontent.com/d/1ZmBtWbnBAL-5C6vDo7zoFOT0RNVFDgXX=s0">
-<img src="https://lh3.googleusercontent.com/d/1MC3ut9539bQfORO16jkWa9xfKZGh83vR=s0">
-<img src="https://lh3.googleusercontent.com/d/1zG8U_SkbGcOVFdOoxQ-j_9lcPyLPafm2=s0">
-<img src="https://lh3.googleusercontent.com/d/1u9DK6THeiiHMQ0FRYfTxMyPE5BgDl2RN=s0">
-<img src="https://lh3.googleusercontent.com/d/1NMmotYMaCqNJdGN5xeHCY0D-P87j4SUg=s0">
-<img src="https://lh3.googleusercontent.com/d/1QT1BWGoVq86lZYBN9RAATknp0Btckmvk=s0">
-<img src="https://lh3.googleusercontent.com/d/1ctkk8wiCnfKeVDtNafHx3a32CcYnQzDn=s0">
-<img src="https://lh3.googleusercontent.com/d/1LmEYddPCP9sCGBciHa27vdx_L0t9xQ7G=s0">
-<img src="https://lh3.googleusercontent.com/d/1U0nn2kNm2SCjr6tPzAbDVbpVrPy15Fdx=s0">
-<img src="https://lh3.googleusercontent.com/d/1YoJlTbwm8xMmu_r0LttoQx9RI5g_LPiz=s0">
-<img src="https://lh3.googleusercontent.com/d/1ZuY0NGJZUUi4zRUWUHVdvmbPv3RMLqXn=s0">
-
+<div class="notes">
+كل الغرف لاجونا أو جانبي بحر أو جاردن روم – 2 كبار + 2 أطفال<br>
+الأسعار تشمل إفطار وعشاء بوفيه مفتوح<br>
+الطفل أقل من 6 سنوات مجانًا – من 6 إلى 12 سنة 50% من سعر الفرد<br>
+إضافة انتقالات من القاهرة (600 جنيه للمقعد ذهاب وعودة)
 </div>
-<div class="card">
-    <iframe src="https://drive.google.com/file/d/1ZtmN22kY0C74m36hkwfGttAg_Gq1FRRb/preview" 
-            width="100%" height="500" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-    </iframe>
+
+<div style="background:#d90429;color:#fff;text-align:center;padding:12px;border-radius:12px;margin-top:12px;font-weight:bold;">
+كوميشن الشركات 300 للفرد في الفترة (900 في حالة حجز فويجين)
 </div>
+
+
+
+
 
 
 <a class="back" href="index.html">⬅ رجوع لقائمة الفنادق</a>
 
 <!-- Lightbox Overlay -->
 <div id="lightbox">
-    <span class="nav prev">&#10095;</span>
     <img id="lightbox-img" src="">
-    <span class="nav next">&#10094;</span>
 </div>
+
 
 <script>
 const images = Array.from(document.querySelectorAll('.gallery img'));
 const lightbox = document.getElementById('lightbox');
 const lightboxImg = document.getElementById('lightbox-img');
-const prevBtn = document.querySelector('.prev');
-const nextBtn = document.querySelector('.next');
 
 let currentIndex = 0;
-
-// فتح الصورة
-images.forEach((img, index) => {
-    img.addEventListener('click', () => {
-        currentIndex = index;
-        showImage();
-        lightbox.style.display = "flex";
-    });
-});
-
-function showImage(){
-    lightboxImg.src = images[currentIndex].src;
-}
-
-// السهم اللي يجيب الصورة اللي بعدها
-nextBtn.addEventListener('click', (e) => {
-    e.stopPropagation();
-    currentIndex++;
-    if(currentIndex >= images.length){
-        currentIndex = 0;
-    }
-    showImage();
-});
-
-// السهم اللي يرجع صورة
-prevBtn.addEventListener('click', (e) => {
-    e.stopPropagation();
-    currentIndex--;
-    if(currentIndex < 0){
-        currentIndex = images.length - 1;
-    }
-    showImage();
-});
-
-// قفل لما اضغط بره الصورة
-lightbox.addEventListener('click', () => {
-    lightbox.style.display = "none";
-});
+let startX = 0;
+let isSwiping = false;
 </script>
 </body>
 </html>
