--- a/acotal.html
+++ b/acotal.html
@@ -300,25 +300,89 @@ body, html{
 <div class="card">
     <h3 style="text-align:center;color:#fd690d;margin-bottom:10px;">صور الفندق</h3>
 
+<div class="gallery">
 
+<img src="https://lh3.googleusercontent.com/d/1dnvYdj6jkuBoAqg1Jpma-1vblIlN8ICZ=s0">
+<img src="https://lh3.googleusercontent.com/d/1rtF_liaHd2Au-8SO_yr7mji7W-7mXYJm=s0">
+<img src="https://lh3.googleusercontent.com/d/1WAU4NcUHa02On89kmiyUKg7VPawoYENq=s0">
+<img src="https://lh3.googleusercontent.com/d/1ggAPjEh8jcfKRvg3KTNszBK6nfspHaah=s0">
+<img src="https://lh3.googleusercontent.com/d/1bXaDicudDR-wBGmbq8C71A2QVzngdKer=s0">
+<img src="https://lh3.googleusercontent.com/d/1XLuOtbvCS1BEmkCfJZPeMeNGp9FEfPOY=s0">
+<img src="https://lh3.googleusercontent.com/d/19abH0JVn05X5LJiqzDn86a-W_wv3ND0m=s0">
+<img src="https://lh3.googleusercontent.com/d/1AvbELe1UqEx-wIeK3E4d5X6sT9EcroT-=s0">
+<img src="https://lh3.googleusercontent.com/d/17WWGw-yPcpK20jM6LE1sWm2z5fMgOJqa=s0">
+<img src="https://lh3.googleusercontent.com/d/1QJbgSfP953HYPSSs3aZhatKhKWZBA0dl=s0">
+<img src="https://lh3.googleusercontent.com/d/138-GpNCXwrf0UzvtgBPNA6bVZcim6hC3=s0">
+<img src="https://lh3.googleusercontent.com/d/1PB4AEZYYhXsbX4_3FLKmT5qnhll4IBuQ=s0">
+<img src="https://lh3.googleusercontent.com/d/1S7MQv1x5jC3ENn9oJHwpWzN4D_OjgWQv=s0">
+<img src="https://lh3.googleusercontent.com/d/1kdNmW2t2RBcp5u38rqOxJdq6W9lUm2QK=s0">
+<img src="https://lh3.googleusercontent.com/d/11CIqH7c0eKc1vrzUcb5pkzwTv_PIrhjw=s0">
+<img src="https://lh3.googleusercontent.com/d/1FYXtzynEBgN_huFgg62QYfc6IatXX3ez=s0">
+<img src="https://lh3.googleusercontent.com/d/1I6xzScCSxrvkZqoqzCJ0ZH0oNoUQnzbx=s0">
+
+</div>
+<div class="card">
+    <iframe src="https://drive.google.com/file/d/1D7HYNcSYgTcKWKzvlA_B7WJKoJxB5ERR/preview" 
+            width="100%" height="500" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+    </iframe>
+</div>
 
 
 <a class="back" href="index.html">⬅ رجوع لقائمة الفنادق</a>
 
 <!-- Lightbox Overlay -->
 <div id="lightbox">
+    <span class="nav prev">&#10095;</span>
     <img id="lightbox-img" src="">
+    <span class="nav next">&#10094;</span>
 </div>
-
 
 <script>
 const images = Array.from(document.querySelectorAll('.gallery img'));
 const lightbox = document.getElementById('lightbox');
 const lightboxImg = document.getElementById('lightbox-img');
+const prevBtn = document.querySelector('.prev');
+const nextBtn = document.querySelector('.next');
 
 let currentIndex = 0;
-let startX = 0;
-let isSwiping = false;
+
+// فتح الصورة
+images.forEach((img, index) => {
+    img.addEventListener('click', () => {
+        currentIndex = index;
+        showImage();
+        lightbox.style.display = "flex";
+    });
+});
+
+function showImage(){
+    lightboxImg.src = images[currentIndex].src;
+}
+
+// السهم اللي يجيب الصورة اللي بعدها
+nextBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex++;
+    if(currentIndex >= images.length){
+        currentIndex = 0;
+    }
+    showImage();
+});
+
+// السهم اللي يرجع صورة
+prevBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
+    currentIndex--;
+    if(currentIndex < 0){
+        currentIndex = images.length - 1;
+    }
+    showImage();
+});
+
+// قفل لما اضغط بره الصورة
+lightbox.addEventListener('click', () => {
+    lightbox.style.display = "none";
+});
 </script>
 </body>
 </html>
